--- a/package.json
+++ b/package.json
@@ -2,7 +2,25 @@
   "name": "pflsc",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
+  "scripts": {
+    "reinstall": "rm -rf node_modules && rm -f yarn.lock && yarn clean && yarn",
+    "clean": "rm -rf build cache coverage coverage.json test-results.xml",
+    "clean-deployed": "rm -rf abis && rm -f .openzeppelin/unknown-31337.json && rm -f .openzeppelin/mumbai.json",
+    "clean-test": "rm -rf abis .openzeppelin/${npm_config_network:-'unknown-31337'}.json deployments/${npm_config_network:-hardhat}/*.json test-results.xml",
+    "verify": "yarn hint && yarn test",
+    "compile": "hardhat --show-stack-traces --max-memory 8192 compile",
+    "test": "yarn clean-test && hardhat test --show-stack-traces && yarn clean-test",
+    "test-only": "yarn clean-test && hardhat test --show-stack-traces",
+    "watch-test": "hardhat watch test",
+    "hint": "solhint \"contracts/**/*.sol\"",
+    "coverage": "yarn clean-test && hardhat --show-stack-traces coverage --temp coverage_build && yarn clean-test",
+    "gas": "REPORT_GAS=true hardhat test",
+    "start": "hardhat node --port 8545",
+    "anvil": "anvil",
+    "deploy": "yarn clean-test && hardhat deploy",
+    "deploy-only": "hardhat deploy --tags",
+    "gen-docs": "solidity-docgen -i contracts -o docs"
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.0.4",
