--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,7 @@
 [default]
 src = 'src'
 out = 'out'
-libs = ['node_modules']
+libs = ['lib','node_modules']
 remappings = [
     'eth-gas-reporter/=node_modules/eth-gas-reporter/',
     'hardhat/=node_modules/hardhat/',
