--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "watch-test": "hardhat watch test",
     "hint": "solhint \"contracts/**/*.sol\"",
     "coverage": "yarn clean-test && hardhat --show-stack-traces coverage --temp coverage_build && yarn clean-test",
-    "gas": "REPORT_GAS=true hardhat test",
+    "hardhat_gas": "REPORT_GAS=true hardhat test",
+    "gas": "forge test -vv --gas-report",
+    "ftest": "forge test -vv --ffi",
     "start": "hardhat node --port 8545",
     "anvil": "anvil",
+    "recreate-remappings": "forge remappings > remappings.txt",
     "deploy": "yarn clean-test && hardhat deploy",
     "deploy-only": "hardhat deploy --tags",
-    "gen-docs": "solidity-docgen -i contracts -o docs"
+    "gen-docs": "solidity-docgen -i contracts -o docs",
+    "slither": "slither contracts/FastLaneAuction.sol"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
