--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "ftest": "forge test -vv --ffi",
     "start": "hardhat node --port 8545",
     "anvil": "anvil",
-    "recreate-remappings": "forge remappings > remappings.txt",
+    "mappings": "forge remappings > remappings.txt",
     "deploy": "yarn clean-test && hardhat deploy",
     "deploy-only": "hardhat deploy --tags",
     "gen-docs": "solidity-docgen -i contracts -o docs",
@@ -40,9 +40,11 @@
     "hardhat-abi-exporter": "^2.9.0",
     "hardhat-gas-reporter": "^1.0.8",
     "hardhat-preprocessor": "^0.1.4",
+    "husky": "^8.0.1",
     "lodash": "^4.17.21",
     "solc": "^0.8.14-fixed",
     "solhint": "^3.3.7",
+    "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.21",
     "solidity-docgen": "^0.6.0-beta.16"
   },
