--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,10 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
-
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
+remappings = [
+    '@openzeppelin=lib/openzeppelin-contracts',
+    'forge-std/=lib/forge-std/src/',
+]
+auto_detect_solc = true
+optimizer = true
+optimizer_runs = 200
