--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.21",
-    "solidity-docgen": "^0.6.0-beta.16"
+    "solidity-docgen": "^0.6.0-beta.16",
+    "typescript": "^4.7.3"
   },
   "dependencies": {
     "dateformat": "^5.0.3",
