--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "expenv": "export $(grep -v '^#' .env | xargs)",
+    "source": "source .env",
+    "allexport": "set -o allexport; source .env; set +o allexport",
     "reinstall": "rm -rf node_modules && rm -f yarn.lock && yarn clean && yarn",
     "clean": "rm -rf build cache coverage coverage.json test-results.xml",
     "clean-deployed": "rm -rf abis && rm -f .openzeppelin/unknown-31337.json && rm -f .openzeppelin/mumbai.json",
@@ -16,14 +19,16 @@
     "coverage": "yarn clean-test && hardhat --show-stack-traces coverage --temp coverage_build && yarn clean-test",
     "hardhat_gas": "REPORT_GAS=true hardhat test",
     "gas": "forge test -vv --gas-report",
-    "ftest": "forge test -vv --ffi",
+    "ftest": "yarn expenv && forge test -vv --fork-url $ALCHEMY_APIKEY_MUMBAI --fork-block-number 26702726 --gas-report --ffi",
+    "ftrpc": "forge test -vv --ffi",
     "start": "hardhat node --port 8545",
     "anvil": "anvil",
     "mappings": "forge remappings > remappings.txt",
     "deploy": "yarn clean-test && hardhat deploy",
     "deploy-only": "hardhat deploy --tags",
     "gen-docs": "solidity-docgen -i contracts -o docs",
-    "slither": "slither contracts/FastLaneAuction.sol"
+    "slither": "slither contracts/FastLaneAuction.sol",
+    "sizes": "forge build --sizes"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
