Add yarn ci to workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
       - name: install libraries
         run: git submodule update --init
       - name: Run tests
-        run: yarn ftest
+        run: yarn ftest-ci
