--- a/foundry.toml
+++ b/foundry.toml
@@ -9,6 +9,10 @@ remappings = [
     'hardhat/=node_modules/hardhat/',
 ]
 gas_reports = ["*"]
+optimizer_runs = 200
+bytecode_hash = "none"
+names = true
+sizes = true
 
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
