--- a/mythril.config.json
+++ b/mythril.config.json
@@ -1,6 +1,7 @@
 {
     "remappings": [
       "openzeppelin-contracts/=lib/openzeppelin-contracts/",
+      "solmate/=lib/solmate/src/",
       "ds-test/=lib/ds-test/src/",
       "forge-std/=lib/forge-std/src/"
     ],
