--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "deploy": "yarn clean-test && hardhat deploy",
     "deploy-only": "hardhat deploy --tags",
     "gen-docs": "solidity-docgen -i contracts -o docs",
+    "gen-inheritance": "slither contracts/FastLaneAuction.sol --print inheritance-graph",
     "slither": "slither . --compile-force-framework foundry --filter-paths 'test|lib'",
     "snapshot": "source .env && forge snapshot -vvv --fork-url ${ALCHEMY_APIKEY_MUMBAI} --fork-block-number 26702726 --gas-report --ffi",
     "sizes": "forge build --sizes",
