Add ABI, add interface, update package json scripts tooling
Lock version, remove empty constructor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "solidity.defaultCompiler": "localNodeModule",
     "solidity.packageDefaultDependenciesContractsDirectory": "contracts",
+    "solidity.defaultCompiler": "embedded",
 }
