Move to 0.8.16, cleanup interface

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "solidity.packageDefaultDependenciesContractsDirectory": "contracts",
-    "solidity.defaultCompiler": "embedded",
+    "solidity.defaultCompiler": "remote",
 }
