--- a/slither.config.json
+++ b/slither.config.json
@@ -5,6 +5,7 @@
         "forge-std/=./lib/forge-std/src/",
         "hardhat/=./node_modules/hardhat/",
         "openzeppelin-contracts/=./lib/openzeppelin-contracts/",
+        "openzeppelin-contracts-upgradeable/=./lib/openzeppelin-contracts-upgradeable/",
         "solmate/=./lib/solmate/src/"
     ]
   }
