Add Relayer Code and Test

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "source": "source .env",
     "allexport": "set -o allexport; source .env; set +o allexport",
     "reinstall": "rm -rf node_modules && rm -f yarn.lock && yarn clean && yarn",
-    "clean": "rm -rf build cache coverage coverage.json test-results.xml",
+    "clean": "rm -rf build cache coverage coverage.json test-results.xml && forge clean",
     "clean-deployed": "rm -rf abis && rm -f .openzeppelin/unknown-31337.json && rm -f .openzeppelin/mumbai.json",
     "coverage": "forge coverage --report lcov && genhtml lcov.info -o report --branch-coverage && open report/index.html",
     "clean-test": "rm -rf abis .openzeppelin/${npm_config_network:-'unknown-31337'}.json deployments/${npm_config_network:-hardhat}/*.json test-results.xml",
@@ -42,6 +42,9 @@
     "snapshot": "source .env && forge snapshot -vvv --gas-report",
     "gen-prepush": "yarn gen-inheritance && yarn gen-interface && yarn gen-abi",
     "sizes": "forge build --sizes",
+    "relayTest": "forge test -vvv --match-contract PFLRelayTest",
+    "auctionTest": "forge test -vvv --match-contract PFLAuctionTest",
+    "solc": "solc-select install 0.8.16 && solc-select use 0.8.16",
     "layout": "slither-read-storage contracts/FastLaneAuction.sol 0xc71cf7eb2839d864f356da13ebe22883fcbc9b0f --layout --solc-remaps 'ds-test/=./lib/forge-std/lib/ds-test/src/ eth-gas-reporter/=./node_modules/eth-gas-reporter/ forge-std/=./lib/forge-std/src/ hardhat/=./node_modules/hardhat/ openzeppelin-contracts/=./lib/openzeppelin-contracts/  openzeppelin-contracts-upgradeable/=./lib/openzeppelin-contracts-upgradeable/  solmate/=./lib/solmate/src/' --rpc-url http://localhost:8545 2> .storage-layout",
     "deploy-anvil-factory": "source .env && forge script script/PreProxyDeploy.s.sol:Deploy --fork-url http://localhost:8545 --private-key $TESTNET_KEY --broadcast",
     "deploy-anvil-eoa": "source .env && forge script script/EOADeploy.s.sol:Deploy --fork-url http://localhost:8545  --private-key $TESTNET_KEY --broadcast",
@@ -66,7 +69,7 @@
     "hardhat-preprocessor": "^0.1.4",
     "husky": "^8.0.1",
     "lodash": "^4.17.21",
-    "solc": "^0.8.15",
+    "solc": "^0.8.16",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.21",
