Renaming and clarifying legacy files

--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
     "anvil-mumbai": "anvil -f $ALCHEMY_APIKEY_MUMBAI",
     "anvil-polygon": "anvil -f $ALCHEMY_APIKEY_POLYGON",
     "anvil-polygon-old": "source .env && anvil -f $ALCHEMY_APIKEY_POLYGON --fork-block-number 32499027",
-    "mythril-local": "myth analyze contracts/FastLaneAuction.sol",
-    "mythril-docker": "docker run -it --rm -v$(pwd):/home/mythril mythril/myth -v4 analyze contracts/FastLaneAuction.sol --solc-json mythril.config.json --solv 0.8.15",
+    "mythril-local": "myth analyze contracts/legacy/FastLaneLegacyAuction.sol",
+    "mythril-docker": "docker run -it --rm -v$(pwd):/home/mythril mythril/myth -v4 analyze contracts/legacy/FastLaneLegacyAuction.sol --solc-json mythril.config.json --solv 0.8.15",
     "mappings": "forge remappings > remappings.txt",
     "deploy": "yarn clean-test && hardhat deploy",
     "deploy-only": "hardhat deploy --tags",
     "gen-docs": "solidity-docgen -i contracts -o docs",
-    "gen-inheritance": "slither contracts/FastLaneAuction.sol --print inheritance-graph",
-    "gen-interface": "cast interface -n IFastLaneAuction -o contracts/interfaces/IFastLaneAuction.sol ./out/FastLaneAuction.sol/FastLaneAuction.json",
-    "gen-abi": "jq '.abi' out/FastLaneAuction.sol/FastLaneAuction.json > contracts/abis/FastLaneAuctionAbi.json",
-    "gen-relay-inheritance": "slither contracts/jit-relay/FastLaneRelay.sol --print inheritance-graph",
-    "gen-relay-interface": "cast interface -n IFastLaneRelay -o contracts/interfaces/IFastLaneRelay.sol ./out/FastLaneRelay.sol/FastLaneRelay.json",
-    "gen-relay-abi": "jq '.abi' out/FastLaneRelay.sol/FastLaneRelay.json > contracts/abis/FastLaneRelayAbi.json",
+    "gen-legacy-inheritance": "slither contracts/legacy/FastLaneLegacyAuction.sol --print inheritance-graph",
+    "gen-legacy-interface": "cast interface -n IFastLaneAuction -o contracts/interfaces/IFastLaneAuction.sol ./out/FastLaneAuction.sol/FastLaneAuction.json",
+    "gen-legacy-abi": "jq '.abi' out/FastLaneAuction.sol/FastLaneAuction.json > contracts/abis/FastLaneAuctionAbi.json",
+    "gen-relay-inheritance": "slither contracts/auction-handler/FastLaneAuctionHandler.sol --print inheritance-graph",
+    "gen-relay-interface": "cast interface -n IFastLaneAuctionHandler -o contracts/interfaces/IFastLaneAuctionHandler.sol ./out/FastLaneAuctionHandler.sol/FastLaneAuctionHandler.json",
+    "gen-relay-abi": "jq '.abi' out/FastLaneAuctionHandler.sol/FastLaneAuctionHandler.json > contracts/abis/FastLaneAuctionHandlerAbi.json",
     
     "slither": "slither . --compile-force-framework foundry --filter-paths 'test|lib'",
     "snapshot": "source .env && forge snapshot -vvv --gas-report",
@@ -48,10 +48,10 @@
     "sizes": "forge build --sizes",
     "relayTest": "forge test -vvv --match-contract PFLRelayTest",
     "snapshot-relay": "source .env && forge snapshot -vvv --match-contract PFLRelayTest --gas-report",
-    "auctionTest": "forge test -vvv --match-contract PFLAuctionTest",
+    "auction-legacy-Test": "forge test -vvv --match-contract PFLAuctionTest",
     "solc": "solc-select install 0.8.16 && solc-select use 0.8.16",
-    "layout": "slither-read-storage contracts/FastLaneAuction.sol 0xc71cf7eb2839d864f356da13ebe22883fcbc9b0f --layout --solc-remaps 'ds-test/=./lib/forge-std/lib/ds-test/src/ eth-gas-reporter/=./node_modules/eth-gas-reporter/ forge-std/=./lib/forge-std/src/ hardhat/=./node_modules/hardhat/ openzeppelin-contracts/=./lib/openzeppelin-contracts/  openzeppelin-contracts-upgradeable/=./lib/openzeppelin-contracts-upgradeable/  solmate/=./lib/solmate/src/' --rpc-url http://localhost:8545 2> .storage-layout",
-    "layout-relay": "slither-read-storage contracts/jit-relay/FastLaneRelay.sol 0xf0E388C7DFfE14a61280a4E5b84d77be3d2875e3 --layout --solc-remaps 'openzeppelin-contracts/=./lib/openzeppelin-contracts/ solmate/=./lib/solmate/src/' --rpc-url http://localhost:8545 2> .storage-relay-layout",
+    "layout": "slither-read-storage contracts/legacy/FastLaneLegacyAuction.sol 0xc71cf7eb2839d864f356da13ebe22883fcbc9b0f --layout --solc-remaps 'ds-test/=./lib/forge-std/lib/ds-test/src/ eth-gas-reporter/=./node_modules/eth-gas-reporter/ forge-std/=./lib/forge-std/src/ hardhat/=./node_modules/hardhat/ openzeppelin-contracts/=./lib/openzeppelin-contracts/  openzeppelin-contracts-upgradeable/=./lib/openzeppelin-contracts-upgradeable/  solmate/=./lib/solmate/src/' --rpc-url http://localhost:8545 2> .storage-layout",
+    "layout-relay": "slither-read-storage contracts/auction-handler/FastLaneAuctionHandler.sol 0xf0E388C7DFfE14a61280a4E5b84d77be3d2875e3 --layout --solc-remaps 'openzeppelin-contracts/=./lib/openzeppelin-contracts/ solmate/=./lib/solmate/src/' --rpc-url http://localhost:8545 2> .storage-relay-layout",
     
     "deploy-anvil-factory": "source .env && forge script script/PreProxyDeploy.s.sol:Deploy --fork-url http://localhost:8545 --private-key $TESTNET_KEY --broadcast",
     "deploy-anvil-eoa": "source .env && forge script script/EOADeploy.s.sol:Deploy --fork-url http://localhost:8545  --private-key $TESTNET_KEY --broadcast",
